--- a/ios-developer.html
+++ b/ios-developer.html
@@ -297,11 +297,11 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Apply to Intermediate iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/5ctnbkpzbq6prme669itsjpxyy'>iOS Developer | Career Movement</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/careermovement/job/5ctnbkpzbq6prme669itsjpxyy'>iOS Developer | Career Movement</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018208-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697018208-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -353,7 +353,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
@@ -374,7 +374,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ChewiCreative/743999695685808-senior-ios-developer'>Chewi Creative Senior iOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -429,7 +429,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PushBotsInc/743999696525212-ios-developer-remote-'>PushBots, Inc. iOS Developer (remote) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
